services/api-recommendation/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-recommendation
  labels:
    app: api-recommendation
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-recommendation
  template:
    metadata:
      labels:
        app: api-recommendation
    spec:
      containers:
        - name: api-recommendation
          image: docker.io/solarianetwork/api-recommendation:latest
          ports:
            - containerPort: 8000
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 250m
              memory: 256Mi
          readinessProbe:
            httpGet:
              path: /health/ready
              port: 8000
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /health/live
              port: 8000
            initialDelaySeconds: 10
            periodSeconds: 20
