services/api-recommendation/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-recommendation
  labels:
    app: api-recommendation
spec:
  type: ClusterIP
  selector:
    app: api-recommendation
  ports:
    - port: 8000
      targetPort: 8000
