services/api-recommendation/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-recommendation
spec:
  ingressClassName: kong
  rules:
    - host: api-recommendation.solarianetwork.site
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: api-recommendation
                port:
                  number: 8000
